--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
-.gradle/
-build/
-*.lock
-*.bin
-.DS_Store
-.idea/
-*.iml
+# Java
+*.class
+*.jar
+*.war
+*.ear
 
+# Gradle
+/build/
+/.gradle/
+
+# IntelliJ IDEA
+/.idea/
+/*.iml
+
+# VS Code
+.vscode/
+
+# OS 별
+.DS_Store
+
+# Logs
+*.log
+
+# Environment
+.env
+application.yml
